--- a/ecommerce.html
+++ b/ecommerce.html
@@ -17,8 +17,8 @@
 </head>
 
 <body>
-  <div>
-    <header>
+  <div class="container">
+    <header class="heading">
       <nav>
         <div class="random">
           <div class="random-image">
@@ -45,10 +45,10 @@
           <span>Contact Us</span>
         </div>
         <div class="nav-pics">
-          <div>
+          <div class="search-circle">
             <img src="search 02.png" alt="">
           </div>
-          <div>
+          <div class="contact-circle">
             <img src="user-circle.png" alt="">
           </div>
           <div>
@@ -79,10 +79,10 @@
     <div class="logoipsum">
       <img src="logo 01.png" alt="">
       <img src="logo 04.png" alt="">
-      <img src="logo 05.png" alt="">
-      <img src="logo 02.png" alt="">
-      <img src="logo 03.png" alt="">
-      <img src="logo 6.png" alt="">
+      <img class=logo-3 src="logo 05.png" alt="">
+      <img class=logo-4 src="logo 02.png" alt="">
+      <img class=logo-5 src="logo 03.png" alt="">
+      <img class=logo-6 src="logo 6.png" alt="">
     </div>
     <div class="bud-arrivals-container">
       <div>
@@ -103,7 +103,7 @@
               </div>
             </div>
             <div class="ear-bud-1">
-              <img src="ear bud 1.png" alt="" width="68%">
+              <img src="ear bud 1.png" alt="" width="83%">
             </div>
             <buttonn class="add-cart">
               Add to cart
@@ -185,7 +185,7 @@
               <p class="wen">
                 NEW
               </p>
-              <img src="ear bud 4.png" alt="" width="80%">
+              <img src="ear bud 4.png" alt="" width="95%">
             </div>
             <div class="skull">
               <p class="stars-4">
@@ -193,7 +193,10 @@
               </p>
               <div class="candy-4">
                 <h5>
-                  Skullcandy - Rail True Wireless Earbuds
+                  Skullcandy - Rail True <span class="wireless">Wireless</span>
+                </h5>
+                <h5>
+                  Earbuds
                 </h5>
                 <h5>
                   $79.99
@@ -208,7 +211,7 @@
                 NEW
               </p>
               <div class="img-5">
-                <img src="ear bud 13.png" alt="">
+                <img src="ear bud 13.png" alt="" width="80%">
               </div>
             </div>
             <div class="pro">
@@ -303,7 +306,7 @@
               </p>
               <div class="infrared-3">
                 <h5>
-                  Sony - WH-1000XM5 Wireless
+                  Sony - WH-1000XM5 <span class="span">Wireless</span>
                 </h5>
                 <h5>
                   Noise Cancelling
@@ -352,7 +355,7 @@
                 &#9733; &#9733; &#9733; &#9733; &#9733;
               </p>
               <h5>
-                Sony - WH-CH720N Wireless
+                Sony - WH-CH720N <span class="span-late">Wireless</span>
               </h5>
               <h5>
                 Noise Cancelling
@@ -427,7 +430,7 @@
                 &#9733; &#9733; &#9733; &#9733; &#9733;
               </p>
               <h5>
-                JBL Reflect Flow Pro+ Bluetooth
+                JBL Reflect Flow Pro+ <span class="blue">Bluetooth</span>
               </h5>
               <h5>
                 Truly Wireless Sports
@@ -489,12 +492,9 @@
       </div>
     </div>
     <div class="hurry">
-      <div>
+      <div class="man-hot">
         <img src="man with ear bud image.png" alt="">
       </div>
-
-
-       
       <div class="promoted">
         <div class="reverse">
           <p class="tion">
@@ -608,7 +608,7 @@
           Instagram
         </h2>
         <p class="follow">
-          Follow us on social media for more discount and promotions
+          Follow us on social media for more discount & promotions
         </p>
         <h5 class="official">
           &#64;3legant&#95;official
@@ -625,14 +625,14 @@
       <div class="spark">
         <img src="random ear bud.png" alt="" width="90%">
       </div>
-      <div>
+      <div class="classic">
         <h2 class="letter">
           Join Our Newsletter
         </h2>
         <h5>
           Sign up for deals, new products and promotions
         </h5>
-        <div class="email">
+        <div class="email"> 
           <div class="email-pic">
             <img src="email.png" alt="" width="24px">
           </div>
@@ -659,11 +659,11 @@
             Headphone Store
           </h5>
           <div class="last-nav-1">
-            <span>Home</span>
-            <span>Shop</span>
-            <span>Product</span>
-            <span>Blog</span>
-            <span>Contact Us</span>
+            <a href="#">Home</a>
+            <a href="#">Shop</a>
+            <a href="#">Product</a>
+            <a href="#">Blog</a>
+            <a href="#">Contact Us</a>
           </div>
         </div>
         <div class="last-nav-2">
