--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
       <div class="bud-collection">
         <div class="headband">
           <div class="img-6">
-            <img src="Ear bud 6.png" alt="" width="85%">
+            <img src="ear bud 9.png" alt="" width="85%">
           </div>
           <div class="head">
             <p class="tired">
