--- a/project 101.html
+++ b/project 101.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="major-container">
+    <div class="container">
     <div class="header">
       <header>
         <nav>
@@ -213,19 +214,8 @@
       </p>
     </footer>
   </div>
-
-
-
-
-
-
-
-
-
   </div>
-
-
-
+  
 
 
 
