--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                   Skullcandy - Rail True <span class="wireless">Wireless</span>
                 </h5>
                 <h5>
-                  Earbuds
+                  Daniel
                 </h5>
                 <h5>
                   $79.99
